--- a/SaveApp/Base.lproj/Main.storyboard
+++ b/SaveApp/Base.lproj/Main.storyboard
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="9531" systemVersion="14F1509" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Ep6-hC-6BH">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="SaveApp" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -20,6 +22,161 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="669" y="227"/>
+        </scene>
+        <!--Collaborator Table View Controller-->
+        <scene sceneID="NfB-sV-3Ev">
+            <objects>
+                <tableViewController id="dyG-QV-ORy" customClass="CollaboratorTableViewController" customModule="SaveApp" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="161" sectionHeaderHeight="28" sectionFooterHeight="28" id="eyq-rZ-OfK">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" placeholderIntrinsicWidth="600" placeholderIntrinsicHeight="140" selectionStyle="none" indentationWidth="10" reuseIdentifier="CollaboratorTableViewCell" rowHeight="161" id="e5E-Xo-pxm" customClass="CollaboratorTableViewCell" customModule="SaveApp" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="161"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="e5E-Xo-pxm" id="hDL-GP-fQM">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="160"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <stackView opaque="NO" contentMode="scaleToFill" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="1BJ-eT-78j">
+                                            <rect key="frame" x="18" y="29" width="564" height="104"/>
+                                            <subviews>
+                                                <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ICA-Z7-EsO">
+                                                    <rect key="frame" x="0.0" y="0.0" width="100" height="100"/>
+                                                    <constraints>
+                                                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="100" id="BLv-UC-LfT"/>
+                                                        <constraint firstAttribute="width" constant="100" id="ELx-tb-sCo"/>
+                                                        <constraint firstAttribute="height" constant="100" id="U0B-K1-H04"/>
+                                                        <constraint firstAttribute="height" relation="greaterThanOrEqual" constant="100" id="ilq-L2-eaE"/>
+                                                    </constraints>
+                                                </imageView>
+                                                <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="top" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="5ya-ys-Hw9">
+                                                    <rect key="frame" x="105" y="0.0" width="459" height="104"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nombre oferta" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="O6G-By-w3l">
+                                                            <rect key="frame" x="0.0" y="0.0" width="449" height="21"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="Pc2-1r-g89">
+                                                            <rect key="frame" x="0.0" y="26" width="449" height="37"/>
+                                                            <subviews>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Descripcion" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="nbF-1c-5sN">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="275" height="37"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Precio" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eTR-uq-6As">
+                                                                    <rect key="frame" x="280" y="0.0" width="82" height="37"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="€" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="2aX-BP-hsS">
+                                                                    <rect key="frame" x="367" y="0.0" width="82" height="37"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                        </stackView>
+                                                        <stackView opaque="NO" contentMode="scaleToFill" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="zHB-iA-A73">
+                                                            <rect key="frame" x="0.0" y="68" width="449" height="36"/>
+                                                            <subviews>
+                                                                <view userInteractionEnabled="NO" contentMode="scaleAspectFit" placeholderIntrinsicWidth="140" placeholderIntrinsicHeight="44" translatesAutoresizingMaskIntoConstraints="NO" id="Gov-rP-NLr" customClass="RatingControl" customModule="SaveApp" customModuleProvider="target">
+                                                                    <rect key="frame" x="0.0" y="0.0" width="275" height="36"/>
+                                                                    <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                                                </view>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Valido hasta: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="zpY-Md-d4L">
+                                                                    <rect key="frame" x="280" y="0.0" width="82" height="36"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="fecha" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tlo-EK-6YF">
+                                                                    <rect key="frame" x="367" y="0.0" width="82" height="36"/>
+                                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                                    <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                                                    <nil key="highlightedColor"/>
+                                                                </label>
+                                                            </subviews>
+                                                            <constraints>
+                                                                <constraint firstItem="tlo-EK-6YF" firstAttribute="height" secondItem="zpY-Md-d4L" secondAttribute="height" id="Fmv-dy-g0e"/>
+                                                                <constraint firstItem="tlo-EK-6YF" firstAttribute="width" secondItem="zpY-Md-d4L" secondAttribute="width" id="j1n-e1-hFT"/>
+                                                            </constraints>
+                                                        </stackView>
+                                                    </subviews>
+                                                    <constraints>
+                                                        <constraint firstItem="zHB-iA-A73" firstAttribute="leading" secondItem="5ya-ys-Hw9" secondAttribute="leading" constant="10" id="3e8-6n-REm"/>
+                                                        <constraint firstItem="2aX-BP-hsS" firstAttribute="height" secondItem="zpY-Md-d4L" secondAttribute="height" id="NFE-s8-KYF"/>
+                                                        <constraint firstItem="Pc2-1r-g89" firstAttribute="leading" secondItem="5ya-ys-Hw9" secondAttribute="leading" constant="10" id="OEo-yf-j1h"/>
+                                                        <constraint firstAttribute="trailing" secondItem="zHB-iA-A73" secondAttribute="trailing" constant="10" id="Tb1-dG-QEW"/>
+                                                        <constraint firstItem="zHB-iA-A73" firstAttribute="width" secondItem="O6G-By-w3l" secondAttribute="width" id="U6p-7Y-gdZ"/>
+                                                        <constraint firstItem="eTR-uq-6As" firstAttribute="height" secondItem="zpY-Md-d4L" secondAttribute="height" id="ZNf-Uf-iZm"/>
+                                                        <constraint firstAttribute="trailing" secondItem="Pc2-1r-g89" secondAttribute="trailing" constant="10" id="jqG-F5-NLI"/>
+                                                        <constraint firstItem="Pc2-1r-g89" firstAttribute="width" secondItem="O6G-By-w3l" secondAttribute="width" id="roD-wm-WYv"/>
+                                                        <constraint firstItem="2aX-BP-hsS" firstAttribute="width" secondItem="zpY-Md-d4L" secondAttribute="width" id="w2A-Jv-vrZ"/>
+                                                        <constraint firstItem="eTR-uq-6As" firstAttribute="width" secondItem="zpY-Md-d4L" secondAttribute="width" id="zaZ-p8-Ylq"/>
+                                                    </constraints>
+                                                    <variation key="default">
+                                                        <mask key="constraints">
+                                                            <exclude reference="OEo-yf-j1h"/>
+                                                            <exclude reference="3e8-6n-REm"/>
+                                                        </mask>
+                                                    </variation>
+                                                </stackView>
+                                            </subviews>
+                                        </stackView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstItem="1BJ-eT-78j" firstAttribute="top" secondItem="hDL-GP-fQM" secondAttribute="topMargin" constant="21" id="3n1-l0-wpM"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="1BJ-eT-78j" secondAttribute="bottom" constant="19" id="Jgm-G2-sbh"/>
+                                        <constraint firstAttribute="trailingMargin" secondItem="1BJ-eT-78j" secondAttribute="trailing" constant="10" id="uJ7-3Y-z9b"/>
+                                        <constraint firstItem="1BJ-eT-78j" firstAttribute="leading" secondItem="hDL-GP-fQM" secondAttribute="leadingMargin" constant="10" id="xet-Sg-IPg"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="dateOffer" destination="tlo-EK-6YF" id="Emn-z9-7Sz"/>
+                                    <outlet property="descriptionOffer" destination="nbF-1c-5sN" id="Awp-K4-pDJ"/>
+                                    <outlet property="nameOffer" destination="O6G-By-w3l" id="Z4Z-3v-dfv"/>
+                                    <outlet property="photoOffer" destination="ICA-Z7-EsO" id="f8t-Pk-thM"/>
+                                    <outlet property="price" destination="eTR-uq-6As" id="6km-hB-FSz"/>
+                                    <outlet property="ratingControlOffer" destination="Gov-rP-NLr" id="UAo-pt-H9v"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="dyG-QV-ORy" id="mbB-T0-e5O"/>
+                            <outlet property="delegate" destination="dyG-QV-ORy" id="HYo-Zz-aK1"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="3Se-5H-gdu"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lCn-W2-vfi" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2373" y="271"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="FQP-cR-9al">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ep6-hC-6BH" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="QkN-2Q-DVC">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="dyG-QV-ORy" kind="relationship" relationship="rootViewController" id="6Yh-K9-T5e"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="FlB-2s-Yjh" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1561" y="271"/>
         </scene>
     </scenes>
 </document>
